fix: Refactor project box layout and caption visibility for improved presentation

--- a/css/main.css
+++ b/css/main.css
@@ -414,6 +414,10 @@ body {
   /* opacity: 1; */
 }
 
+.text-caption {
+  color: white !important;
+}
+
 .project-box:hover .project-img {
   transform: scale(1.1);
   transition: all 2s cubic-bezier(0.23, 1, 0.32, 1) 0s;
